Update build.gradle & module-info.java